2010-09-13  Ingo Renner  <ingo.renner@dkd.de>

	* Added a content extraction class for TYPO3 pages
	* Changed SolrPhpClient library to be in sync with r38 at http://code.google.com/p/solr-php-client/
	* Added a field processor service and an actual timestamp to ISO date field processor

2010-09-10  Markus Goldbach  <markus.goldbach@dkd.de>

	* Changed install script, check if all required packages are installed, update Tomcat to 6.0.29 and rename Tomcat directory to simplify updates, credits Michel Tremblay

2010-08-30  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #9481: viewhelper CurrentResultNumber doesn't respect selected number, credits Rik Willems

2010-08-25  Markus Goldbach <markus.goldbach@dkd.de>

	* Added ISOLatin mapping to scheam.xml

2010-08-13  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed an issue where 0 was not accepted for the minimumMatch TypoScript parameter
	* Added setting of Solr parameter echoParams=all when enabling debugMode

2010-08-04  Markus Godlbach  <markus.goldbach@dkd.de>

	* Added a hook and interface to modify facets before rendering them

2010-08-02  Ingo Renner  <ingo.renner@dkd.de>

	* Added an option to completely en/disable EXT:solr - Useful for multi site installation where you want to enable EXT:solr for some sites only

2010-07-29  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed utf-8 encoding for dynamic string and text fields added through TypoScript configuration in the frontend indexer

2010-07-28  Ingo Renner  <ingo.renner@dkd.de>

	* Added method tx_solr_SolrService::deleteByType()

2010-07-28  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* !!! Fixed issue #7698: Upgrade auto suggest to use jQuery UI 1.8
	* !!! Upgraded to jQuery 1.4.2
	* Added configuration options to change javascript files and stylesheets used by suggestions

2010-07-27  Ingo Renner  <ingo.renner@dkd.de>

	* Added a way to disable / reset the minimum match mm query parameter